fixed spacing on aggregates

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,7 @@ p {
 .aggregate {
 
 	margin-top: .5em;
-	margin-left: 32%;
+	margin-left: 28%;
 	margin-bottom: 2em;
 	
 }
